--- a/conf/application.conf
+++ b/conf/application.conf
@@ -37,14 +37,14 @@ application.langs="en"
 # db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
 # db.default.password=""
-db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost/report"
-db.default.user=root
+db.default.driver=org.postgresql.Driver
+db.default.url="jdbc:postgresql://localhost/jmcnally-website"
+db.default.user=jmcnally
 db.default.password=""
 
 # Slick configuration
 # ~~~~~
-slick.default= "models.database.Reports"
+slick.default= "models.database.Website"
 
 # Evolutions
 # ~~~~~
